fix overlap tooltip

--- a/app/styles/tree/tree-level-7.scss
+++ b/app/styles/tree/tree-level-7.scss
@@ -345,8 +345,8 @@
           &-11011{
             bottom: 44.44%;
             left: 45.31%;
-            width: 83.3%;
-            height: 83.3%;
+            width: 25px;
+            height: 25px;
           }
           &-11001{
             bottom: 49.30%;
@@ -491,8 +491,8 @@
           &-000101 { //mecanica
             bottom: 54.86%;
             left: 23.82%;
-            width: 86.5%;
-            height: 86.5%;
+            width: 25px;
+            height: 25px;
           }
           &-000121 { //telemetria
             bottom: 58.05%;
@@ -628,8 +628,8 @@
           &-310100 { //fabula
             bottom: 65.27%;
             left: 70.39%;
-            width: 83.3%;
-            height: 83.3%;
+            width: 25px;
+            height: 25px;
           }
           &-311100 { //escala
             bottom: 68.05%;
@@ -911,7 +911,7 @@
           }
           &-3011{
             &.florecida{
-              z-index: 1;
+              // z-index: 1;
               background-image: url(../images/tree/branchs/level-5/rama088.png);
             }
           }
